fix: containers spacing

--- a/src/Components/About/index.css
+++ b/src/Components/About/index.css
@@ -1,7 +1,20 @@
 .about {
-  font-weight: 100;
+  margin: 24px 0;
   max-width: 768px;
-  margin: 40px 0;
+  width: 100%;
+}
+
+.about__title {
+  color: var(--black);
+  text-align: center;
+  margin: 0;
+  @media (max-width: 780px) {
+    font-size: 24px;
+  }
+}
+
+.about__description {
+  font-weight: 100;
 }
 
 .about__link {
