--- a/src/Components/PostsContainer/index.css
+++ b/src/Components/PostsContainer/index.css
@@ -8,6 +8,20 @@
 }
 
 .posts__title {
+  color: var(--black);
+  text-align: center;
+  margin: 0;
+  @media (max-width: 780px) {
+    font-size: 24px;
+  }
+}
+
+.posts__link {
+  color: var(--black);
+  text-underline-offset: 2px;
+}
+
+.posts__subtitle {
   font-weight: 100;
   text-align: center;
   width: 50%;
@@ -23,6 +37,9 @@
   max-width: 1024px;
   width: 100%;
   margin-top: 32px;
+  @media (max-width: 780px) {
+    margin-top: 24px;
+  }
 }
 
 .post__container {
